# pytc

./: .gitignore  README.md  pyproject.toml  setup.py
demos/ca-edta/: demo_test.py  hepes-01.DH  hepes-02.DH  hepes-03.DH  hepes-blank.DH  imid-01.DH  imid-02.DH  imid-03.DH  imid-blank.DH  tris-01.DH  tris-02.DH  tris-03.DH  tris-blank.DH
demos/nitpic/ca-edta_tris-01.sedphat/: ca-edta_tris-01.sedphat  ca-edta_tris-01.sedphat_PAR  ca-edta_tris-01.sedphat_PRIOR  ca-edta_tris-01.xp
demos/nitpic/ca-edta_tris-01.sedphat/_ca-edta_tris-01.xp/: ca-edta_tris-01.error-dat  ca-edta_tris-01.nitpic  ca-edta_tris-01.xp
demos/temp-dependence/: 10C.DH  17C.DH  25C.DH  30C.DH  35C.DH  5C.DH
pytc/indiv_models/: base.py
