[build-system]
requires = ["setuptools >= 71.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pytc-fitter"
version = "1.1.5"
description="Python software package for analyzing Isothermal Titration Calorimetry data"
requires-python = ">= 3.8"
dependencies = [
  "matplotlib",
  "scipy",
  "numpy",
  "emcee",
  "corner",
]
# [tool.setuptools]
# package-dir = {"" = "src"}
# #py-modules = ["_custom_build"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "pytc"}
ext-modules = [
    {name = "pytc.indiv_models.bp_ext", sources = ["src/_bp_ext.c"], include-dirs = ["src", "numpy.get_include()"], py-limited-api = true}
]